--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6"
   }
 }
